adiciona endpoint recuperação de senha

--- a/src/views/emails/forgotPasswordMail.hbs
+++ b/src/views/emails/forgotPasswordMail.hbs
@@ -13,5 +13,7 @@
   <p>Recebemos sua solicitação para redefinir a senha, associada a este email.
     Click no link abaixo para redefinir a senha:</p>
 
-  <p>{{token}}</p>
+  <a
+    href='http://localhost:3000/forgot-password/{{token}}'
+  >http://localhost:3000/forgot-password/{{token}}</a>
 </div>
