--- a/src/views/emails/adoptionMail.hbs
+++ b/src/views/emails/adoptionMail.hbs
@@ -1,16 +1,14 @@
 <style>
 
   .body { display: flex; flex-direction: column; align-items: center;
-  justify-content: center; padding: 2rem; } label { font-size: 1rem;
-  margin-bottom: 20px; } h3 { margin-bottom: 20px; } .foto-animal { width: 100%;
-  max-width: 200px; height: 200px; } p { margin-bottom: 1rem; }
+  justify-content: center; padding: 2rem; } .message-header{ font-size: 40px;
+  margin-bottom: 30px; } .foto-animal { width: 100%; max-width: 200px; height:
+  200px; object-fit: cover; } p { margin-bottom: 20px; }
 
 </style>
 
 <div class='body'>
-  <label> Olá <strong>{{name}}</strong>! Tudo bem?</label>
-
-  <h3>{{title}}</h3>
+  <p class='message-header'> Olá <strong>{{name}}</strong>! Tudo bem?</p>
 
   <div class='foto-animal'>
     <img src={{animaFoto}} alt='Foto de um cachorro' />
