--- a/src/views/emails/forgotPasswordMail.hbs
+++ b/src/views/emails/forgotPasswordMail.hbs
@@ -14,6 +14,6 @@
     Click no link abaixo para redefinir a senha:</p>
 
   <a
-    href='http://localhost:3000/forgot-password/{{token}}'
-  >http://localhost:3000/forgot-password/{{token}}</a>
+    href='http://localhost:3000/reset-password/{{token}}'
+  >http://localhost:3000/reset-password/{{token}}</a>
 </div>
