adiciona url no template de email

--- a/src/views/emails/forgotPasswordMail.hbs
+++ b/src/views/emails/forgotPasswordMail.hbs
@@ -14,6 +14,6 @@
     Click no link abaixo para redefinir a senha:</p>
 
   <a
-    href='http://localhost:3000/reset-password/{{token}}'
-  >http://localhost:3000/reset-password/{{token}}</a>
+    href='https://caosemcasa.vercel.app/reset-password/?key={{token}}&email={{email}}'
+  >https://caosemcasa.vercel.app/?key={{token}}&email={{email}}</a>
 </div>
